Added Nov 2024 Tape Out repo as submodule
Signed-off-by: Sergei Andreev <andreev@ihp-microelectronics.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Tapeout_2024/May"]
 	path = Tapeout_2024/May
 	url = ../TO_May2024.git
+[submodule "Tapeout_2024/Nov"]
+	path = Tapeout_2024/Nov
+	url = ../TO_Nov2024.git
